--- a/application/frontend/src/app/menu/menu.component.scss
+++ b/application/frontend/src/app/menu/menu.component.scss
@@ -1,3 +1,21 @@
 .menu {
   background-color: white;
 }
+
+.mat-button.active {
+  background-color: lightgray;
+}
+
+.mat-icon {
+  position: relative;
+  top: 5px;
+  left: 5px;
+
+  &.connected {
+    color: green;
+  }
+
+  &.unconnected {
+    color: red;
+  }
+}
