fixes, jogging view

--- a/application/frontend/src/app/menu/menu.component.html
+++ b/application/frontend/src/app/menu/menu.component.html
@@ -69,6 +69,11 @@
             mat-menu-item routerLinkActive="active">
       Camera
     </button>
+    <!-- Tools/Jogging -->
+    <button routerLink="/tools/jog"
+            mat-menu-item routerLinkActive="active">
+      Jogging
+    </button>
   </mat-menu>
 </div>
 
