--- a/application/frontend/src/app/ui/number-dialog/number-dialog.component.scss
+++ b/application/frontend/src/app/ui/number-dialog/number-dialog.component.scss
@@ -1,5 +1,9 @@
 .buttons {
   display:flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-between;
+}
+
+.mat-raised-button {
+  font-size: 2em;
 }
