--- a/application/frontend/src/app/content/motion/motion.component.scss
+++ b/application/frontend/src/app/content/motion/motion.component.scss
@@ -1,3 +1,12 @@
 .mat-card {
   margin-top:5px;
 }
+
+.mat-button, .mat-raised-button{
+  font-size: 2em;
+  font-weight: bold;
+  margin: 10px 0;
+}
+.label {
+  font-size: 2em;
+}
