--- a/application/frontend/src/app/content/picture/picture-overlap/picture-overlap.component.scss
+++ b/application/frontend/src/app/content/picture/picture-overlap/picture-overlap.component.scss
@@ -1,3 +1,13 @@
 .mat-card {
   margin-top:5px;
 }
+
+.mat-raised-button{
+  font-size: 2em;
+  font-weight: bold;
+  margin:10px;
+}
+
+.label {
+  font-size: 2em;
+}
