--- a/application/frontend/src/app/ui/digit-spinner/digit-spinner.component.scss
+++ b/application/frontend/src/app/ui/digit-spinner/digit-spinner.component.scss
@@ -1,12 +1,14 @@
 .button {
-  min-width: 40px;
+  min-width: 60px;
   padding: 0;
-  height: 40px;
+  height: 60px;
+  font-weight: bold;
+  font-size: 2em;
 }
 
 .value {
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
   display: flex;
   flex-direction: column;
   justify-content: center;
