--- a/application/frontend/src/app/content/shots/shots.component.scss
+++ b/application/frontend/src/app/content/shots/shots.component.scss
@@ -1,12 +1,8 @@
+.mat-card {
+  margin: 5px 5px;
+}
+
 .shots {
   width: 100%;
 }
 
-
-tr.mat-row {
-  //height: 36px;
-}
-
-.mat-button {
-  //line-height: 35px;
-}
