first pano bot view

--- a/application/frontend/src/app/content/pano/pano-robot/pano-robot.component.html
+++ b/application/frontend/src/app/content/pano/pano-robot/pano-robot.component.html
@@ -1,1 +1,23 @@
-<p>pano-robot works!</p>
+<mat-card>
+  ImageFOV
+  <div>a.x:{{imageFov?.a.x}} a.y:{{imageFov?.b.x}} = {{imageFov?.a.x - imageFov?.b.x}}</div>
+  <div>a.y:{{imageFov?.a.y}} b.y:{{imageFov?.b.y}} = {{imageFov?.a.y - imageFov?.b.y}}</div>
+</mat-card>
+
+<mat-card>
+  PanoFOV (partial:{{panoFov?.partial}})
+  <div>a.x:{{panoFov?.a.x}} b.x:{{panoFov?.b.x}} = {{panoFov?.a.x - panoFov?.b.x}} </div>
+  <div>a.y:{{panoFov?.a.y}} b.y:{{panoFov?.b.y}} = {{panoFov?.a.y - panoFov?.b.y}}</div>
+</mat-card>
+
+<mat-card>
+  Pano
+  <div>x:{{pano?.x}} -> nx:{{pano?.x.length}}</div>
+  <div>y:{{pano?.y}} -> ny:{{pano?.y.length}}</div>
+</mat-card>
+
+<mat-card>
+  Robot:
+  x:<span [class.moving] = "status?.actor.x.isMoving">{{status?.actor.x.position}}</span>
+  y:<span [class.moving] = "status?.actor.y.isMoving">{{status?.actor.y.position}}</span>
+</mat-card>
