--- a/application/frontend/src/app/content/shots/shots.component.html
+++ b/application/frontend/src/app/content/shots/shots.component.html
@@ -5,14 +5,14 @@
     <ng-container matColumnDef="focusTime">
       <th mat-header-cell *matHeaderCellDef> focusTime</th>
       <td mat-cell *matCellDef="let shot; let i = index">
-        <button mat-button (click)="editCell(shot,'focusTime')">{{shot?.focusTime.toFixed(1)}} s</button>
+        <button mat-button (click)="editCell(i,'focusTime')">{{shot?.focusTime.toFixed(1)}} s</button>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="triggerTime">
       <th mat-header-cell *matHeaderCellDef> TriggerTime</th>
-      <td mat-cell *matCellDef="let shot">
-        <button mat-button (click)="editCell(shot,'triggerTime')">{{shot?.triggerTime.toFixed(1)}} s</button>
+      <td mat-cell *matCellDef="let shot; let i = index">
+        <button mat-button (click)="editCell(i,'triggerTime')">{{shot?.triggerTime.toFixed(1)}} s</button>
       </td>
     </ng-container>
 
